# mlb-media-guide-parser

./: .gitignore  processed 2020-02-26.xlsx  pyproject.toml
mlb_team_employee_database/: det.ipynb  pit.ipynb  sd.ipynb
mlb_team_employee_database/data/input/: 2017-ari.html  2023-laa-official.xlsx
mlb_team_employee_database/data/input/2017/: ari-2017
source/: cle_media_guide_front_office.ipynb  det_media_guide_front_office.ipynb
src/: ari.ipynb  ari_media_guide_front_office.ipynb  atl.ipynb  det_media_guide_front_office.ipynb  kcr.ipynb  nyy.ipynb  oak.ipynb  pit.ipynb  stl.ipynb  tb.ipynb
