[tool.poetry]
name = "mlb-team-employee-database"
version = "0.1.0"
description = ""
authors = ["Brian Barnes <brianbarnes@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
ipykernel = "^6.29.5"
cleantext = "^1.1.4"
pandas = "^2.2.3"
pypdf2 = "^3.0.1"
openpyxl = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
